--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "localforage": "1.7.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "redux": "^3.0.0 || ^4.0.0"
   }
 }
