--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: 14
-            - run: npm ci
+            - run: npm i
             - run: npm test
 
     bump-version:
@@ -62,7 +62,7 @@ jobs:
               with:
                   node-version: 14
                   registry-url: https://npm.pkg.github.com/
-            - run: npm ci
+            - run: npm i
             - run: npm run build
             - run: npm publish
               env:
