--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-react-session",
+  "name": "@nickcaseg3r/redux-react-session",
   "version": "2.6.2",
   "description": "",
   "main": "dist/index.js",
@@ -13,6 +13,9 @@
     "clean": "rimraf dist",
     "prepublishOnly": "npm run build"
   },
+  "publishConfig": {
+  "registry":"https://npm.pkg.github.com"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bernabe9/redux-react-session.git"
